fetching and searching done

--- a/FayFlix/index.html
+++ b/FayFlix/index.html
@@ -17,15 +17,15 @@
         </div>
     </div>
 
+    <div class="search">
+        <input id="find" type="search" placeholder="Search movies here...">
+    </div>
+
     <div class="movielist" id="list">
 
-        <div class="box">
-            <img src="" alt="poster">
-            <p id="moviename"></p>
-
-        </div>
-
     </div>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
